--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<a href="mailto:klipik.rez@gmail.com?subject=Acount%20deletion&body=Delete%20my%20account%20and%20data.">PLEASE DELETE MY ACCOUNT</a>
+<h1>Account & Data Deletion Policy</h1>
+
+<p> This app uses Google Play Games Services for sign-in and leaderboard functionality.
+We do not store, process, or collect any personal data on our servers.</p>
+
+<p data-start="1146" data-end="1369">If you would like to disconnect your Google Play Games profile from this app, you can do so in the <a href="https://support.google.com/googleplay/answer/9130646?hl=en">Google Play Games app</a> or by contacting us at: klipik.rez@gmail.com</p>
